[package]
name = "minsky"
version = "0.2.0"
authors = ["Benjamin Jones <bfj@amazon.com>"]
edition = "2018"
build = "build.rs"

# lalrpop library is needed to generate parser code at build time.
[build-dependencies]
lalrpop = {version = "0.19.0", features = ["lexer"]}

# The generated parser code depends on lalrpop-util.
# The generated tokenizer depends on the regex.
[dependencies]
lalrpop-util = "0.19.0"
regex = "1"
